--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html,body{
 }
 
 .headerbg {
-	background-image: url('../img/bg.png');
+	background-image: url('assets/bg.png');
 	background-size: cover;
 	color:#FFF;
 	padding: 5%;
@@ -16,7 +16,7 @@ html,body{
 }
 
 .logo {
-	width: 40%;
+	width: 65%;
 	margin-top:30%;
 }
 
