--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html,body{
 }
 
 .headerbg {
-	background-image: url('assets/bg.png');
+	background-image: url('assets/background.jpg');
 	background-size: cover;
 	color:#FFF;
 	padding: 5%;
